# wemedia-agent

./: .gitignore  02-自媒体Agent.md  README.md  pyproject.toml
backend/: .env.example  main.py  pyproject.toml  requirements.txt
backend/app/: __init__.py
backend/app/agents/: image_agent.py  tools.py  writing_agent.py
backend/app/api/: deps.py
backend/app/api/v1/: assets.py  evals.py  hot_topics.py  sources.py  workflows.py
backend/app/core/: config.py  database.py  observability.py
backend/app/db/: init_sql.py
backend/app/graph/: langgraph_app.py  state.py  workflow.py
backend/app/models/: __init__.py  workflow_record.py
backend/app/services/: embedding_service.py  graph_rag_service.py  hot_topic_adapters.py  hot_topic_scout_agent.py  http_client.py  image_service.py  llm_service.py  metrics_service.py  publish_service.py  social_service.py  tracing_service.py  wechat_publisher.py  workflow_service.py
backend/data/: seed.json
backend/scripts/: create_database.sql  init_db.py
docs/: technical_guide.md
frontend/: index.html  package-lock.json  package.json  vite.config.js
frontend/src/: App.vue  api.js  style.css
