[project]
name = "demo2"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.138.0",
    "langchain>=1.3.10",
    "langgraph-checkpoint-postgres>=3.0.1",
    "langgraph>=1.2.6",
    "langsmith>=0.8.18",
    "psycopg>=3.3.4",
    "pydantic>=2.13.4",
    "redis>=8.0.0",
    "rq>=2.10.0",
    "slowapi>=0.1.10",
    "sqlalchemy>=2.0.51",
    "sse-starlette>=3.4.5",
    "structlog>=26.1.0",
    "uvicorn>=0.49.0",
]
